--- a/src/com/Aggie_FindIt/Admin.fxml
+++ b/src/com/Aggie_FindIt/Admin.fxml
@@ -1,14 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.image.ImageView?>
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TableColumn?>
 <?import javafx.collections.FXCollections?>
-<?import java.lang.String?>
 
-<VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Aggie_FindIt.AdminPageController">
+<VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Aggie_FindIt.AdminPageController">
   <children>
       <ButtonBar prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #981853;">
         <buttons>
@@ -22,32 +36,42 @@
             <HBox minWidth="41.0" prefHeight="40.0" prefWidth="435.0" />
             <HBox minWidth="41.0" prefHeight="40.0" prefWidth="435.0" />
             <HBox minWidth="41.0" prefHeight="40.0" prefWidth="435.0" />
-          <Button mnemonicParsing="false" text="Logout" textAlignment="RIGHT" onAction="#logout"/>
+          <Button mnemonicParsing="false" onAction="#logout" text="Logout" textAlignment="RIGHT" />
         </buttons>
       </ButtonBar>
     <SplitPane dividerPositions="0.1475501113585746, 0.7511135857461024" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <items>
         <AnchorPane>
           <children>
-            <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" minWidth="60.0" prefWidth="-1.0" style="&#10;" text="Item interact" textAlignment="CENTER" wrapText="false">
-              <font>
-                <Font size="18.0" fx:id="x1" />
-              </font>
-              <textFill>
-                <Color red="0.624" green="0.624" blue="0.624" fx:id="x2" />
-              </textFill>
-            </Label>
-                  <Button layoutX="24.0" layoutY="83.0" mnemonicParsing="false" onAction="#itemReturn" text="Item Return" />
-                  <Button layoutX="28.0" layoutY="144.0" mnemonicParsing="false" text="Add Item" onAction="#showItemInputForm"/>
-                  <Button layoutX="21.0" layoutY="51.0" mnemonicParsing="false" text="Item Requests" onAction="#showRequestInfo"/>
-                  <Button layoutX="23.0" layoutY="114.0" mnemonicParsing="false" onAction="#itemSearch" text="Item lookup" />
+                  <Button layoutX="19.0" layoutY="228.0" mnemonicParsing="false" onAction="#itemReturn" text="Item Return">
+                     <font>
+                        <Font size="14.0" />
+                     </font></Button>
+                  <Button layoutX="25.0" layoutY="306.0" mnemonicParsing="false" onAction="#showItemInputForm" text="Add Item">
+                     <font>
+                        <Font size="14.0" />
+                     </font></Button>
+                  <Button layoutX="12.0" layoutY="187.0" mnemonicParsing="false" onAction="#showRequestInfo" text="Item Requests">
+                     <font>
+                        <Font size="14.0" />
+                     </font></Button>
+                  <Button layoutX="18.0" layoutY="267.0" mnemonicParsing="false" onAction="#itemSearch" text="Item lookup">
+                     <font>
+                        <Font size="14.0" />
+                     </font></Button>
           </children>
         </AnchorPane>
         <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
           <content>
           <AnchorPane id="Content" fx:id="middlePane" minHeight="-1.0" minWidth="-1.0" prefHeight="545.0" prefWidth="534.0">
               <children>
-                <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" style="&#10;" text="Main" textAlignment="CENTER" textFill="$x2" wrapText="false" />
+                <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" style="&#10;" text="Main" textAlignment="CENTER" wrapText="false">
+                           <font>
+                      <Font size="18.0" fx:id="x1" />
+                           </font>
+                           <textFill>
+                      <Color red="0.624" green="0.624" blue="0.624" fx:id="x2" />
+                           </textFill></Label>
                   <TextField fx:id="itemDescription" disable="true" layoutX="16.0" layoutY="132.0" prefHeight="70.0" prefWidth="504.0" promptText="Item description" />
                   <TextField fx:id="itemColor" disable="true" layoutX="193.0" layoutY="86.0" promptText="Item Color" />
                   <ChoiceBox fx:id="itemCategory" disable="true" layoutX="15.0" layoutY="86.0" prefWidth="150.0" />
@@ -62,61 +86,61 @@
                   <Button fx:id="searchButton" disable="true" layoutX="21.0" layoutY="215.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="130.0" text="Search item" />
                   <TextArea fx:id="procedure" disable="true" layoutX="21.0" layoutY="261.0" prefHeight="224.0" prefWidth="492.0" text="To return an item: &#10;&#10;1. Make sure the item is in storage&#10; &#10;2. Once complete, using item description and information, ask students questions about &#10;the item to make sure it is theirs. &#10;&#10;3. Once it is made sure they know the item, if applicable, do one of the following to verify&#10;ownership:&#10; -Ask them to unlock the electronic device&#10; -If no password is needed for the device, ask if it is possible to provide receipts of &#10;  purchase" />
                   <VBox>
-                    <ListView fx:id="requestListView" prefHeight="200.0" prefWidth="400.0" onMouseClicked="#handleRequestSelection" />
-                    <TextArea fx:id="requestDetailsArea" prefHeight="200.0" prefWidth="400.0" wrapText="true" editable="false" />
+                    <ListView fx:id="requestListView" onMouseClicked="#handleRequestSelection" prefHeight="225.0" prefWidth="400.0" />
+                    <TextArea fx:id="requestDetailsArea" editable="false" prefHeight="285.0" prefWidth="358.0" wrapText="true" />
                     <HBox spacing="10">
-                      <Button fx:id="markFoundButton" text="Mark as Found" onAction="#markAsFound" />
-                      <Button fx:id="markNotFoundButton" text="Mark as Not Found" onAction="#markAsNotFound" />
+                      <Button fx:id="markFoundButton" onAction="#markAsFound" text="Mark as Found" />
+                      <Button fx:id="markNotFoundButton" onAction="#markAsNotFound" text="Mark as Not Found" />
                     </HBox>
                   </VBox>
 
-            <VBox fx:id="itemInputForm" layoutX="50.0" layoutY="80.0" spacing="5" alignment="CENTER" visible="false">
-                  <Label text="Add New Item"/>
+            <VBox fx:id="itemInputForm" alignment="CENTER" layoutX="50.0" layoutY="80.0" spacing="5" visible="false">
+                  <Label text="Add New Item" />
                   <HBox>
-                      <Label text="Item Name:"/>
-                      <TextField fx:id="itemNameField"/>
+                      <Label text="Item Name:" />
+                      <TextField fx:id="itemNameField" />
                   </HBox>
                   <HBox>
-                      <Label text="Description:"/>
-                      <TextField fx:id="descriptionField"/>
+                      <Label text="Description:" />
+                      <TextField fx:id="descriptionField" />
                   </HBox>
                   <HBox>
-                      <Label text="Building:"/>
+                      <Label text="Building:" />
                       <ComboBox fx:id="buildingField">
                           <items>
                               <FXCollections fx:factory="observableArrayList">
-                                  <String fx:value="Zhul Library"/>
-                                  <String fx:value="Corbett Center Student Union"/>
-                                  <String fx:value="Activity Center"/>
-                                  <String fx:value="Science Hall"/>
-                                  <String fx:value="Hardman and Jacobs Undergraduate Learning Center"/>
-                                  <String fx:value="Branson Library"/>
-                                  <String fx:value="Foster Hall"/>
-                                  <String fx:value="Frenger Food Court"/>
-                                  <String fx:value="Domenici Hall"/>
-                                  <String fx:value="Breland Hall"/>
-                                  <String fx:value="Others"/>
+                                  <String fx:value="Zhul Library" />
+                                  <String fx:value="Corbett Center Student Union" />
+                                  <String fx:value="Activity Center" />
+                                  <String fx:value="Science Hall" />
+                                  <String fx:value="Hardman and Jacobs Undergraduate Learning Center" />
+                                  <String fx:value="Branson Library" />
+                                  <String fx:value="Foster Hall" />
+                                  <String fx:value="Frenger Food Court" />
+                                  <String fx:value="Domenici Hall" />
+                                  <String fx:value="Breland Hall" />
+                                  <String fx:value="Others" />
                               </FXCollections>
                           </items>
                       </ComboBox>
                   </HBox>
                   <HBox>
-                      <Label text="Category:"/>
+                      <Label text="Category:" />
                       <ComboBox fx:id="categoryField">
                           <items>
                               <FXCollections fx:factory="observableArrayList">
-                                  <String fx:value="Electronics"/>
-                                  <String fx:value="Clothing"/>
-                                  <String fx:value="Books"/>
-                                  <String fx:value="Keys"/>
-                                  <String fx:value="Accessories"/>
-                                  <String fx:value="Others"/>
+                                  <String fx:value="Electronics" />
+                                  <String fx:value="Clothing" />
+                                  <String fx:value="Books" />
+                                  <String fx:value="Keys" />
+                                  <String fx:value="Accessories" />
+                                  <String fx:value="Others" />
                               </FXCollections>
                           </items>
                       </ComboBox>
                   </HBox>
-                  <Button text="Submit" onAction="#handleSubmitItem"/>
-                  <Button text="Cancel" onAction="#handleCancelItemInput"/>
+                  <Button onAction="#handleSubmitItem" text="Submit" />
+                  <Button onAction="#handleCancelItemInput" text="Cancel" />
                 </VBox>
 
               </children>
@@ -126,17 +150,17 @@
         <AnchorPane>
           <HBox>
           <children>
-            <TableView fx:id="logTableView" >
+            <TableView fx:id="logTableView">
                   <columns>
-                      <TableColumn fx:id="itemNameColumn" text="Item Name" prefWidth="100.0" />
-                      <TableColumn fx:id="descriptionColumn" text="Description" prefWidth="100.0" />
-                      <TableColumn fx:id="buildingColumn" text="Building" prefWidth="100.0" />
-                      <TableColumn fx:id="categoryColumn" text="Category" prefWidth="100.0" />
-                      <TableColumn fx:id="timeColumn" text="Time" prefWidth="100.0" />
+                      <TableColumn fx:id="itemNameColumn" prefWidth="100.0" text="Item Name" />
+                      <TableColumn fx:id="descriptionColumn" prefWidth="100.0" text="Description" />
+                      <TableColumn fx:id="buildingColumn" prefWidth="100.0" text="Building" />
+                      <TableColumn fx:id="categoryColumn" prefWidth="100.0" text="Category" />
+                      <TableColumn fx:id="timeColumn" prefWidth="100.0" text="Time" />
                   </columns>
               </TableView>
           </children>
-          <Button fx:id="reloadButton" text="Reload" onAction="#updateLog" />
+          <Button fx:id="reloadButton" onAction="#updateLog" text="Reload" />
           </HBox>
       </AnchorPane>
       </items>
