--- a/src/com/Aggie_FindIt/WhereToGo.fxml
+++ b/src/com/Aggie_FindIt/WhereToGo.fxml
@@ -4,26 +4,31 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" minHeight="720.0" minWidth="1024.0" spacing="20" style="-fx-background-color: linear-gradient(to bottom, #941853, #6A1237);" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Aggie_FindIt.WhereToGoPageController">
-    <padding>
-        <Insets bottom="20" left="20" right="20" top="20" />
-    </padding>
+<ScrollPane fitToHeight="true" fitToWidth="true" minHeight="720.0" minWidth="1024.0" prefHeight="720.0" prefWidth="1024.0" style="-fx-background: transparent;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Aggie_FindIt.WhereToGoPageController">
+    <content>
+        <VBox alignment="CENTER" spacing="20" style="-fx-background-color: linear-gradient(to bottom, #941853, #6A1237);">
+            <padding>
+                <Insets bottom="20" left="20" right="20" top="20" />
+            </padding>
 
-    <VBox alignment="CENTER" spacing="10">
-        <Label style="-fx-font-size: 32px; -fx-font-weight: bold; -fx-text-fill: white;" text="Where to go?" />
-        <Label style="-fx-font-size: 15px; -fx-text-fill: white;" text="Below are buildings where lost and found items go! Select a building and see where it is at!" />
-    </VBox>
+            <VBox alignment="CENTER" spacing="10">
+                <Label style="-fx-font-size: 32px; -fx-font-weight: bold; -fx-text-fill: white;" text="Where to go?" />
+                <Label style="-fx-font-size: 15px; -fx-text-fill: white;" text="Below are buildings where lost and found items go! Select a building and see where it is at!" />
+            </VBox>
 
-    <VBox alignment="CENTER" spacing="10" xmlns:fx="http://javafx.com/fxml">
-        <ComboBox fx:id="comboBox" prefWidth="200" promptText="Select a location" />
-        <ImageView fx:id="imageView" fitHeight="500.0" fitWidth="779.0" preserveRatio="true" />
-    </VBox>
+            <VBox alignment="CENTER" spacing="10">
+                <ComboBox fx:id="comboBox" prefWidth="200" promptText="Select a location" />
+                <ImageView fx:id="imageView" fitHeight="437.0" fitWidth="716.0" preserveRatio="true" />
+            </VBox>
 
-    <HBox alignment="CENTER" spacing="15">
-        <Button onAction="#goBack" style="-fx-background-color: #6c757d; -fx-text-fill: white; -fx-font-size: 14px; -fx-pref-width: 120px;" text="Go back" />
-    </HBox>
-</VBox>
+            <HBox alignment="CENTER" spacing="15">
+                <Button onAction="#goBack" style="-fx-background-color: #6c757d; -fx-text-fill: white; -fx-font-size: 14px; -fx-pref-width: 120px;" text="Go back" />
+            </HBox>
+        </VBox>
+    </content>
+</ScrollPane>
