--- a/src/com/Aggie_FindIt/Admin.fxml
+++ b/src/com/Aggie_FindIt/Admin.fxml
@@ -40,8 +40,8 @@
                   <Button layoutX="24.0" layoutY="83.0" mnemonicParsing="false" onAction="#itemReturn" text="Item Return" style="-fx-pref-width: 100"/>
                   <Button layoutX="24.0" layoutY="144.0" mnemonicParsing="false" text="Add Item" onAction="#showItemInputForm" style="-fx-pref-width: 100"/>
                   <Button layoutX="24.0" layoutY="51.0" mnemonicParsing="false" text="Item Requests" onAction="#showRequestInfo" style="-fx-pref-width: 100"/>
-                  <Button layoutX="24.0" layoutY="114.0" mnemonicParsing="false" onAction="#itemSearch" text="Item lookup" style="-fx-pref-width: 100"/>
-          </children>
+                  <Button layoutX="24.0" layoutY="114.0" mnemonicParsing="false" onAction="#showItemSearchForm" text="Item lookup" style="-fx-pref-width: 100"/>
+        </children>
         </AnchorPane>
         <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
           <content>
@@ -69,6 +69,56 @@
                       <Button fx:id="markNotFoundButton" text="Mark as Not Found" onAction="#markAsNotFound" />
                     </HBox>
                   </VBox>
+
+
+             <VBox fx:id="itemSearchForm" layoutX="50.0" layoutY="80.0" spacing="5" alignment="CENTER" visible="false">
+                <Label text="Search for Item"/>
+                  <HBox>
+                      <Label text="Item Name:"/>
+                      <TextField fx:id="SearchitemNameField"/>
+                  </HBox>
+                  <HBox>
+                      <Label text="Description:"/>
+                      <TextField fx:id="SearchdescriptionField"/>
+                  </HBox>
+                  <HBox>
+                      <Label text="Building:"/>
+                      <ComboBox fx:id="SearchbuildingField">
+                          <items>
+                              <FXCollections fx:factory="observableArrayList">
+                                  <String fx:value="Zhul Library"/>
+                                  <String fx:value="Corbett Center Student Union"/>
+                                  <String fx:value="Activity Center"/>
+                                  <String fx:value="Science Hall"/>
+                                  <String fx:value="Hardman and Jacobs Undergraduate Learning Center"/>
+                                  <String fx:value="Branson Library"/>
+                                  <String fx:value="Foster Hall"/>
+                                  <String fx:value="Frenger Food Court"/>
+                                  <String fx:value="Domenici Hall"/>
+                                  <String fx:value="Breland Hall"/>
+                                  <String fx:value="Others"/>
+                              </FXCollections>
+                          </items>
+                      </ComboBox>
+                  </HBox>
+                  <HBox>
+                      <Label text="Category:"/>
+                      <ComboBox fx:id="SearchcategoryField">
+                          <items>
+                              <FXCollections fx:factory="observableArrayList">
+                                  <String fx:value="Electronics"/>
+                                  <String fx:value="Clothing"/>
+                                  <String fx:value="Books"/>
+                                  <String fx:value="Keys"/>
+                                  <String fx:value="Accessories"/>
+                                  <String fx:value="Others"/>
+                              </FXCollections>
+                          </items>
+                      </ComboBox>
+                  </HBox>
+                  <Button text="Search" onAction="#performItemSearch"/>
+                  <Button text="Cancel" onAction="#handleCancelSearch"/>
+            </VBox>
 
             <VBox fx:id="itemInputForm" layoutX="50.0" layoutY="80.0" spacing="5" alignment="CENTER" visible="false">
                   <Label text="Add New Item"/>
